--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "short_name": "Robo",
   "icons": [
     {
+      "src": "/favicon-96x96.png",
+      "sizes": "96x96 64x64 32x32 24x24 16x16",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
       "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
