--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "./RoboFriends",
   "theme_color": "#ffffff",
   "background_color": "#28d9ce",
   "display": "standalone"
