--- a/manifest.json
+++ b/manifest.json
@@ -3,25 +3,25 @@
   "short_name": "Robo",
   "icons": [
     {
-      "src": "favicon-96x96.png",
+      "src": "/favicon-96x96.png",
       "sizes": "96x96 64x64 32x32 24x24 16x16",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "web-app-manifest-192x192.png",
+      "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "web-app-manifest-512x512.png",
+      "src": "/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "start_url": "./RoboFriends",
+  "start_url": ".",
   "theme_color": "#ffffff",
   "background_color": "#28d9ce",
   "display": "standalone"
