--- a/manifest.json
+++ b/manifest.json
@@ -3,25 +3,25 @@
   "short_name": "Robo",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/RoboFriends/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon",
       "purpose": "maskable"
     },
     {
-      "src": "favicon-96x96.png",
+      "src": "/RoboFriends/favicon-96x96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "web-app-manifest-192x192.png",
+      "src": "/RoboFriends/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "web-app-manifest-512x512.png",
+      "src": "/RoboFriends/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
